# claudius

./: .actrc  .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  flake.nix  justfile  rustfmt.nightly.toml  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  security.yml
docs/: op-reference-design.md
examples/: variable_expansion_demo.sh
scripts/: coverage-detailed.sh  coverage.sh  fmt.sh  install-hooks.sh  lint.sh  profile.sh  test-stats.sh
src/: agent_paths.rs  app_config.rs  asset_sync.rs  bootstrap.rs  cli.rs  codex_settings.rs  commands.rs  config.rs  doctor.rs  gemini_settings.rs  json_merge.rs  lib.rs  main.rs  merge.rs  profiling.rs  secrets.rs  skills.rs  sync_operations.rs  template.rs  validation.rs  variable_expansion.rs
src/config/: reader.rs  writer.rs
src/merge/: strategy.rs
tests/: lib.rs
tests/fixtures/: codex_settings.toml  merge_test_fixtures.rs  mock_op.sh  mod.rs
tests/integration/: agent_assets_test.rs  app_config_test.rs  cli_test.rs  codex_model_providers_test.rs  codex_sync_test.rs  codex_toml_test.rs  commands_test.rs  context_test.rs  doctor_test.rs  gemini_system_settings_test.rs  init_test.rs  install_context_test.rs  merge_interactive_test.rs  mod.rs  multi_agent_sync_test.rs  parallel_performance_test.rs  run_command_test.rs  secrets_fixture_test.rs  settings_test.rs  skills_test.rs  validate_test.rs  variable_expansion_test.rs
tests/unit/: app_config_test.rs  append_context_test.rs  claude_mcp_merge_test.rs  codex_toml_dot_test.rs  commands_test.rs  config_agent_test.rs  config_path_test.rs  config_test.rs  merge_test.rs  mod.rs  reader_test.rs  rules_test.rs  secrets_test.rs  settings_sync_test.rs  settings_test.rs  skills_test.rs  template_test.rs  writer_test.rs
